Re-ordering fields and fixing vertical alignment in compare quals

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -9,3 +9,7 @@
 @import "patterns/list-card";
 @import "patterns/filters";
 @import "patterns/qual-search";
+
+.ofq-comparison-title {
+    min-height: 4em;
+}
